# gigame

./: .env.example  .gitignore
backend/: alembic.ini  pyproject.toml
backend-java/: pom.xml
backend-java/src/main/resources/: application.yml
backend/app/: config.py  main.py
backend/app/api/: chat.py  documents.py  knowledge_bases.py  scenarios.py
backend/app/models/: __init__.py  base.py  chat.py  document.py  knowledge_base.py  scenario.py
backend/app/schemas/: chat.py  document.py  knowledge_base.py  scenario.py
backend/app/services/: chat_service.py  document_service.py  gigachat_client.py  kb_service.py  scenario_engine.py  scenario_service.py  vector_store.py
backend/gigame_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: chat.ts  client.ts  knowledge-bases.ts  scenarios.ts
frontend/src/components/: ErrorBoundary.tsx
frontend/src/components/chat/: ChatWindow.tsx  KBSelector.tsx  MessageBubble.tsx  MessageInput.tsx
frontend/src/components/knowledge-base/: KBDetail.tsx
frontend/src/components/layout/: AppLayout.tsx  Sidebar.tsx  SidebarList.tsx
frontend/src/components/scenario/: LabeledEdge.tsx  NodeConfigPanel.tsx  NodePalette.tsx  ResizablePanel.tsx  ScenarioNode.tsx  ScenarioRunner.tsx
frontend/src/components/ui/: dropzone.tsx  markdown.tsx  skeleton.tsx  toast.tsx
frontend/src/pages/: ChatPage.tsx  KnowledgeBasePage.tsx  ScenarioEditorPage.tsx  ScenarioRunPage.tsx  ScenariosPage.tsx
frontend/src/stores/: scenarioStore.ts
(+53 files in other folders)
